--- a/app/assets/scss/partials/_app.scss
+++ b/app/assets/scss/partials/_app.scss
@@ -34,6 +34,7 @@
 // Full width for header/footer etc
 .app-component-preview--full-width,
 .app-component-preview--modal {
+  width: 100%;
   max-width: none;
   margin-right: 0;
   margin-left: 0;
