Use aria-hidden="true" instead of role="none" for logo
role="none"/"presentational" does not do enough to hide the child fallback image used from browsers.

We have found that Chrome's new "Get image descriptions from Google" feature will notice this fallback image.

This means when screenreaders such as NVDA visit the logo, it'll announce "Unlabelled graphic, To get missing image descriptions, open the context menu." for this fallback image.

By using aria-hidden="true" we can ensure that the SVG and it's children are all hidden from the accessibility tree, which I have confirmed in NVDA + Chrome.

- [Get image descriptions on Chrome](https://support.google.com/chrome/answer/9311597?hl=en)
- [The Difference Between role=”presentation” and aria-hidden=”true”](https://timwright.org/blog/2016/11/19/difference-rolepresentation-aria-hiddentrue/)

--- a/src/govuk/components/header/template.njk
+++ b/src/govuk/components/header/template.njk
@@ -17,7 +17,7 @@
           treat it as an interactive element - without this it will be
           'focusable' when using the keyboard to navigate. #}
           <svg
-            role="presentation"
+            aria-hidden="true"
             focusable="false"
             class="govuk-header__logotype-crown"
             xmlns="http://www.w3.org/2000/svg"
