Use aria-hidden="true" on SVG images for consistency
Where possible we should use aria-hidden="true" instead of role="none"/"presentation", this is mainly for consistency with the header component where aria-hidden="true" ensures child elements are hidden as well which is not a problem with the button and footer component.

- [The Difference Between role=”presentation” and aria-hidden=”true”
](https://timwright.org/blog/2016/11/19/difference-rolepresentation-aria-hiddentrue/)

--- a/src/govuk/components/footer/template.njk
+++ b/src/govuk/components/footer/template.njk
@@ -54,7 +54,7 @@
         treat it as an interactive element - without this it will be
         'focusable' when using the keyboard to navigate. #}
         <svg
-          role="presentation"
+          aria-hidden="true"
           focusable="false"
           class="govuk-footer__licence-logo"
           xmlns="http://www.w3.org/2000/svg"
