Add collapseOnMobile flag to breadcrumbs component
When this flag is passed, the breadcrumbs component on mobile collapses down to the first and last item only

--- a/src/govuk/components/breadcrumbs/_index.scss
+++ b/src/govuk/components/breadcrumbs/_index.scss
@@ -107,4 +107,17 @@
     @include govuk-link-common;
     @include govuk-link-style-text;
   }
+
+  .govuk-breadcrumbs--collapse-on-mobile {
+    @include govuk-media-query($until: tablet) {
+      .govuk-breadcrumbs__list-item {
+        display: none;
+
+        &:first-child,
+        &:last-child {
+          display: inline-block;
+        }
+      }
+    }
+  }
 }
