Group helpers and objects into logical groups
Improve the navigation within Sass Docs by grouping helpers and objects into logical groups.

--- a/src/govuk/objects/_main-wrapper.scss
+++ b/src/govuk/objects/_main-wrapper.scss
@@ -1,5 +1,9 @@
 @import "../base";
 
+////
+/// @group objects/layout
+////
+
 // Example usage with Breadcrumbs, phase banners, back links:
 // <div class="govuk-width-container">
 //   <!-- Breadcrumbs, phase banners, back links are placed in here. -->
