Remove focus from checkbox div and apply to checkbox input

--- a/src/govuk/components/checkboxes/_index.scss
+++ b/src/govuk/components/checkboxes/_index.scss
@@ -28,6 +28,15 @@
   .govuk-checkboxes__item:last-of-type {
     margin-bottom: 0;
   }
+  
+  .govuk-checkboxes__item:focus {
+    outline: none;
+
+    & .govuk-checkboxes__label:before {
+      border-width: 4px;
+      box-shadow: 0 0 0 $govuk-focus-width $govuk-focus-colour;
+    }
+  }
 
   .govuk-checkboxes__input {
     $input-offset: ($govuk-touch-target-size - $govuk-checkboxes-size) / 2;
