Make it possible to exclude link from header nav
Currently if you don't pass a `href` the navigation item link won't render when
using the header macro. This PR changes the navigation link to render
without the link wrapper if `item.text` or `item.html` is set but `href`
isn't.

We would expect this to be mainly useful for rendering a form for instance
for adding a log out button. The team will need to style any enclosed form
elements or buttons correctly.

--- a/src/govuk/components/header/template.njk
+++ b/src/govuk/components/header/template.njk
@@ -64,11 +64,15 @@
     <nav>
       <ul id="navigation" class="govuk-header__navigation {{ params.navigationClasses if params.navigationClasses }}" aria-label="{{ params.navigationLabel | default('Top Level Navigation') }}">
         {% for item in params.navigation %}
-          {% if item.href and (item.text or item.html) %}
+          {% if item.text or item.html %}
             <li class="govuk-header__navigation-item{{ ' govuk-header__navigation-item--active' if item.active }}">
-              <a class="govuk-header__link" href="{{ item.href }}"{% for attribute, value in item.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+              {% if item.href %}
+                <a class="govuk-header__link" href="{{ item.href }}"{% for attribute, value in item.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+              {% endif %}
                 {{ item.html | safe if item.html else item.text }}
-              </a>
+              {% if item.href %}
+                </a>
+              {% endif %}
             </li>
           {% endif %}
         {% endfor %}
