--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -102,6 +102,15 @@
       // Hack to stop focus style being overlapped by the suffix
       z-index: 1;
     }
+
+    @include govuk-media-query($until: mobile) {
+      display: block;
+
+      .govuk-input {
+        // Set max-width to override potential width override class on the input
+        max-width: 100%;
+      }
+    }
   }
 
   .govuk-input__prefix,
@@ -138,13 +147,28 @@
 
     flex: 0 0 auto;
 
+    @include govuk-media-query($until: mobile) {
+      display: block;
+      height: 100%;
+      white-space: normal;
+    }
   }
 
   .govuk-input__prefix {
-    border-right: 0;
+    @include govuk-media-query($until: mobile) {
+      border-bottom: 0;
+    }
+    @include govuk-media-query($from: mobile) {
+      border-right: 0;
+    }
   }
 
   .govuk-input__suffix {
-    border-left: 0;
+    @include govuk-media-query($until: mobile) {
+      border-top: 0;
+    }
+    @include govuk-media-query($from: mobile) {
+      border-left: 0;
+    }
   }
 }
