--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -8,7 +8,6 @@
 
     box-sizing: border-box;
     width: 100%;
-    min-width: 0;
     height: 40px;
     @if $govuk-typography-use-rem {
       height: govuk-px-to-rem(40px);
@@ -94,15 +93,14 @@
 
   .govuk-input__wrapper {
     display: flex;
-    display: -ms-flexbox; // sass-lint:disable-line no-duplicate-properties
 
     .govuk-input {
-      display: inline-block;
       flex: 0 1 auto;
     }
 
     .govuk-input:focus {
-      z-index: 1; // increase z-index on focus so it appears over the suffix
+      // Hack to stop focus style being overlapped by the suffix
+      z-index: 1;
     }
   }
 
@@ -123,7 +121,6 @@
     @if $govuk-typography-use-rem {
       height: govuk-px-to-rem(40px);
     }
-    margin-top: 0;
 
     padding: govuk-spacing(1);
 
@@ -136,7 +133,8 @@
 
     text-align: center;
     white-space: nowrap;
-    cursor: default; // emphasise non-editable status of prefixes and suffixes
+    // Emphasise non-editable status of prefixes and suffixes
+    cursor: default;
 
     flex: 0 0 auto;
 
@@ -149,5 +147,4 @@
   .govuk-input__suffix {
     border-left: 0;
   }
-
 }
