Add print styles for the panel component
Because the panel component is currently white text on a green background, it prints without the background with with light grey text (at least in Chrome).

Add print styles to remove the background, set the text colour to black and add a border (like we do when colours are overridden).

--- a/src/govuk/components/panel/_index.scss
+++ b/src/govuk/components/panel/_index.scss
@@ -20,6 +20,12 @@
   .govuk-panel--confirmation {
     color: govuk-colour("white");
     background: govuk-colour("green", $legacy: "turquoise");
+
+    @include govuk-media-query($media-type: print) {
+      border-color: currentColor;
+      color: $govuk-print-text-colour;
+      background: none;
+    }
   }
 
   .govuk-panel__title {
